[metadata]
name = playbook
version = 0.0.2
description = "Playbook"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/playbook
license = 'OSI Approved :: Apache Software License',
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
	= src
	# directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)
install_requires =
	click
	markt
include_package_data = True
python_requires = >=3.8

[options.package_data]
sse_starlette = "./src/playbook/py.typed"

[isort]
profile = black
src_paths = isort,test
skip = .gitignore,.dockerignore,.tox,.venv,build,dist

[flake8]
max-complexity = 10
max-line-length = 88
ignore =
	E203  ; whitespace before ‘:’ (black)
	F541  ; f-string is missing placeholders
	B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts
exclude =
	.git
	__pycache__
	.venv
	.eggs
	*.egg
	dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (tests,)
ignore_missing_imports = True
follow_imports = silent
no_implicit_optional = True

[coverage:run]
omit = tests/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*
branch = True

[coverage:report]
show_missing = True
skip_covered = True
;fail_under = 75

[tool.scriv]
format = md
version = literal: ./src/playbook/__init__.py: __version__